# puzzle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile
k8s/helm/jfdi/: Chart.yaml  values.yaml
k8s/helm/jfdi/templates/: _helpers.tpl  deployment.yaml
k8s/helm/jfdi/values/: live.yaml  paper.yaml
k8s/helm/tenant/: custom_values.yaml
k8s/kind/: cluster.yaml
k8s/manifests/: namespaces.yaml  persistent_volumes.yaml  storage_classes.yaml
notebooks/developments/: gamma_exposure_calculation.ipynb
notebooks/insights/: non_ergodicity_is_everywhere.ipynb  numerically_estimating_optimal_risk.ipynb  proprietary_trading_firms_are_convex.ipynb  red_numbers_are_bigger_than_green_numbers.ipynb  simple_and_centred_moving_averages.ipynb
src/jfdi/: main.py
src/jfdi/actors/: borrowing_fee.py  equity.py  fx.py  rank.py  turbulence.py  weight.py
src/jfdi/actors/directional_changes/: extrema.py  extrema_difference.py  extrema_second_difference.py  overshoot_differences.py
src/jfdi/extensions/indicators/ta_lib/: common.py  manager.py
src/jfdi/extensions/strategies/: weight.py
src/jfdi/fee_models/: interactive_brokers.py
src/jfdi/indicators/: alma.py  mmi.py
src/jfdi/indicators/ehler/: high_pass.py  low_pass.py  ultimate_bands.py  ultimate_oscillator.py  ultimate_range.py  zlema.py
src/jfdi/strategies/examples/: buy_and_hold.py  buy_top_ranks.py  short_fishy_pair.py
src/jfmi/cross_validation/: combinatorial_purged_k_fold.py  purge.py  purged_k_fold.py  utilities.py
src/jfmi/plot/: candlesticks.py  colour_scales.py  cross_validators.py  drawdowns.py  templates.py  utilities.py  weights.py
src/jfmi/utilities/: calendar.py  wrangle.py
src/jfri/: README.md  __init__.py  main.py  prefect.yaml
src/jfri/contracts/: occ.py  options.py
src/jfri/flows/alpha_vantage/: clean_options_chain.py  ingest_options_chain.py
src/jfri/flows/cboe/: clean_options_chain.py  ingest_options_chain.py
src/jfri/tasks/: clean_options_chain.py
src/jfri/tasks/alpha_vantage/: catalog.py  clean_options_chain.py  client.py  ingest_data_as_json.py
src/jfri/tasks/cboe/: catalog.py  clean_options_chain.py  client.py  ingest_options_chain.py
src/shared/data/: drawdowns.py  returns.py  rounding.py
src/shared/io/: arrow.py  catalog.py  hdf.py
tests/: test_asdf.py
tests/jfmi/: test_purge.py
