[project]
name = "jfdi"
version = "0.1.0"
description = "do it"
authors = [
    { name = "alpal", email = "spring_special_0f@icloud.com" }
]
readme = "README.md"
packages = [
    { include = "jfdi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
numpy = ">=2.2.6,<3.0.0"
scipy = ">=1.15.3,<2.0.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
nbformat = "^5.10.4"
nbconvert = "^7.16.6"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
black = "^25.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[tool.black]
target-version = ["py313"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
