[project]
name = "jfdi"
version = "0.1.0"
description = "do it"
authors = [
    { name = "alpal", email = "spring_special_0f@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "nautilus-trader>=1.217.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
jfmi = [
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
]
jfdi = [
    "defusedxml>=0.7.1",
    "nautilus-ibapi>=10.30.1",
]
jfri = [
    "httpx>=0.28.1",
    "prefect>=3.4.4",
    "prefect-ray>=0.4.4",
    "pydantic>=2.11.5",
    "ray>=2.46.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]

[tool.ruff.lint]
select = [
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",  # isort
  "N",  # pep8-naming
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "D",  # pydocstyle
  "F",  # pyflakes
  "UP",  # pyupgrade
  "RUF",  # ruff-specific
]
ignore = [
    "B008",  # function-call-in-default-argument
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "D105",  # undocumented-magic-method
    "D106",  # undocumented-public-nested-class
    "D107",  # undocumented-public-init
    "D417",  # undocumented-param
    "E203",  # whitespace-before-punctuation
    "F401",  # unused-import
    "N803",  # invalid-argument-name
    "S101",  # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
